--- a/css/index.css
+++ b/css/index.css
@@ -12,9 +12,32 @@ body {
   /* Åı­¶­±©l²×¦û³sÄı¾¹Á`°ª */
   height: 100vh;
   background-color: black;
-  /* µø¶Z Åı¤¸¯À¬İş¨Ó§ó¹³3D */
+  /* µø¶Z Åı¤¸¯À¬İ??¨Ó§ó¹³3D */
   perspective: 2000px;
 
+}
+
+
+#travel {
+  color:white;
+  font-size: 8em;
+  transform: translateY(-100px);
+  font-weight: 700;
+  color: #f5f5f5;
+  text-shadow: 1px 1px 1px #919191,
+      1px 2px 1px #919191,
+      1px 3px 1px #919191,
+      1px 4px 1px #919191,
+      1px 5px 1px #919191,
+      1px 6px 1px #919191,
+      1px 7px 1px #919191,
+      1px 8px 1px #919191,
+      1px 9px 1px #919191,
+      1px 10px 1px #919191,
+  1px 18px 6px rgba(16,16,16,0.4),
+  1px 22px 10px rgba(16,16,16,0.2),
+  1px 25px 35px rgba(16,16,16,0.2),
+  1px 30px 60px rgba(16,16,16,0.4);
 }
 
 section {
@@ -24,10 +47,9 @@ section {
   height: 200px;
   /* ¹«¼Ğ©ñ¨ì·Ó¤ùÅÜ¦¨¤p¤â */
   cursor: pointer;
-
+  animation: rotate 7s ease-in-out infinite;
   /* Åı¤l¤¸¯À«O¯d3D¦ì¸m */
   transform-style: preserve-3d;
-  animation: rotate 7s ease-in-out infinite;
   right: 200px;
   bottom: 200px;
 }
@@ -44,6 +66,7 @@ section div {
   -webkit-box-reflect: below 0px
   -webkit-linear-gradient(transparent 10%, rgba(255,255,255,0.3));
 }
+
 
 section div:nth-child(1){
   transform: translateZ(250px);
@@ -74,11 +97,29 @@ section div:nth-child(6){
   0% {
     transform: rotateY(0);
   }
+  17% {
+    transform: rotateY(60deg);
+  }
+  34% {
+    transform: rotateY(120deg);
+  }
+  51% {
+    transform: rotateY(180deg);
+  }
+  68% {
+    transform: rotateY(240deg);
+  }
+  85% {
+    transform: rotateY(300deg);
+  }
   100% {
     transform: rotateY(360deg);
   }
 }
 
+
+
 img {
   width: 200px;
 }
+
