--- a/css/kuonlun.css
+++ b/css/kuonlun.css
@@ -1,6 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
-  justify-content: center;
+  justify-content:left;
   align-items: center;
   min-height: 100vh;
   overflow: hidden;
@@ -10,31 +16,47 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: translateY(-350px) translateX(50px) rotateZ(-10deg);
 }
 
 .container .box {
   transform-style: preserve-3d;
+  animation: animate 25s linear infinite;
+
+}
+
+@keyframes animate {
+  0%{
+    transform: rotateX(0);
+  }
+
+  100%{
+    transform: rotateX(360deg);
+  }
 }
 
 .container .box span {
   position: absolute;
   color: #fff;
-  font-size: 3.5em;
+  font-size: 2em;
   white-space: nowrap;
   text-transform: uppercase;
   font-weight: 900;
   padding: 0 10px;
+  background: linear-gradient(90deg, transparent, rgba(0,0,0,0.5), transparent);
+  line-height: 0.8em;
   transform-style: preserve-3d;
-  text-shadow: 0 5px 15px rgba(0.0.0.0.25);
-  transform: translate(-150%, -450%) rotateX(calc(var(--i) * 22.5deg));
+  text-shadow: 0 40px 50px rgba(0,0,0,0.25);
+  transform: rotateX(calc(var(--i) * 30deg)) translateZ(50px);
+  left: 0px;
 }
 
 .container .box span i:nth-child(1) {
   font-style: initial;
-  color: #ff246f;
+  color: #12b5ff;
 }
 
 .container .box span i:nth-child(2) {
   font-style: initial;
-  color: #12b5ff;
+  color: #dfc864;
 }
