--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   /* 初始化 取消頁面的內外邊距 */
   padding: 0;
   margin: 0;
+  color:white;
 }
 
 body {
@@ -11,7 +12,8 @@ body {
   align-items: center;
   /* 讓頁面始終佔連覽器總高 */
   height: 100vh;
-  background-color: black;
+  background-image: url('../bg.jpg');
+  background-size: 100%;
   /* 視距 讓元素看??來更像3D */
   perspective: 2000px;
 
@@ -91,6 +93,8 @@ section div:nth-child(5){
 section div:nth-child(6){
   transform: rotateY(300deg) translateZ(250px);
 }
+
+
 
 /* 定義旋轉動畫 */
 @keyframes rotate {
