--- a/css/index.css
+++ b/css/index.css
@@ -20,10 +20,9 @@ body {
 }
 
 
-#travel {
+.travel {
   color:white;
   font-size: 8em;
-  transform: translateY(-100px);
   font-weight: 700;
   color: #f5f5f5;
   text-shadow: 1px 1px 1px #919191,
@@ -40,6 +39,8 @@ body {
   1px 22px 10px rgba(16,16,16,0.2),
   1px 25px 35px rgba(16,16,16,0.2),
   1px 30px 60px rgba(16,16,16,0.4);
+
+  transform: translateZ(calc(var(--i) * 10px)) translateY(-100px);
 }
 
 section {
