--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
   /* 初始化 取消頁面的內外邊距 */
   padding: 0;
   margin: 0;
-  color:white;
+  /* color:white; */
 }
 
 body {
@@ -12,7 +12,7 @@ body {
   align-items: center;
   /* 讓頁面始終佔連覽器總高 */
   height: 100vh;
-  background-image: url('../bg.jpg');
+  /* background-image: url('../bg.jpg'); */
   background-size: 100%;
   /* 視距 讓元素看??來更像3D */
   perspective: 2000px;
