--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   /* 讓頁面始終佔連覽器總高 */
   height: 100vh;
-  /* background-image: url('../bg.jpg'); */
+  background-image: url('../bg.jpg');
   background-size: 100%;
   /* 視距 讓元素看??來更像3D */
   perspective: 2000px;
@@ -143,6 +143,7 @@ img {
   padding: 0;
 } */
 
+
 .swiper-container {
   width: 100%;
   padding-top: 50px;
@@ -154,5 +155,9 @@ img {
   background-size: cover;
   width: 300px;
   height: 300px;
-  background: #000;
+}
+
+.swiper-slide img {
+  display: block;
+  /* width: 100%; */
 }
